edit the into section

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Shizuru&display=swap");
+
 .first-section {
   background: url("https://images.unsplash.com/photo-1472289065668-ce650ac443d2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGNyZWF0aXZlJTIwZGVzaWdufGVufDB8MHwwfHw%3D&auto=format&fit=crop&w=500&q=160")
     no-repeat center center fixed;
@@ -25,13 +27,16 @@
 }
 .my-name {
   font-weight: bold;
+  font-family: ;
 }
 
 .about-me {
   padding: 5%;
   color: black;
 }
-.creative {
+.intro {
+  font-family: "Shizuru", cursive;
+  text-transform: uppercase;
 }
 .photo {
   padding: 5%;
