--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,9 @@
   text-transform: uppercase;
 }
 .photo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .dp {
   width: 90%;
@@ -60,8 +63,10 @@
 }
 body {
   color: darkgray;
+  background-color: #000;
 }
-.intro-projects{
-  {
-
-
+.projects > div {
+  background-color: #1a1616;
+  margin: 15px;
+  padding: 2%;
+}
