--- a/css/styles.css
+++ b/css/styles.css
@@ -69,4 +69,6 @@ body {
   background-color: #1a1616;
   margin: 15px;
   padding: 2%;
+  border-radius: 5%;
+  box-shadow: 0px 0px 20px rgb(0, 0, 0/10%);
 }
